# hdmap

./: .clang-format  .clangd  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  packages.json  setup.py
.github/workflows/: macos-build.yaml  ubuntu-build.yaml
cmake/: opendrive-engine-config.cmake.in  opendrive-engine.pc.in
hdmap_common/: CMakeLists.txt  package.xml
hdmap_common/include/hdmap_common/: fs.h  log.h  macros.h  rw_lock.h  util.h
hdmap_common/src/: rw_lock.cc  util.cc
hdmap_common/test/: util_test.cc
hdmap_engine/: CMakeLists.txt  package.xml
hdmap_engine/include/hdmap_engine/: engine.h  engine_impl.h  geometry.h
hdmap_engine/include/hdmap_engine/adapter/: convertor.h  parser.h
hdmap_engine/include/hdmap_engine/adapter/opendrive/: element.h  opendrive_convertor.h  opendrive_parser.h
hdmap_engine/include/hdmap_engine/adapter/opendrive/parser/: base_parser.h  header_parser.h  map_parser.h  road_parser.h  section_parser.h
hdmap_engine/include/hdmap_engine/algo/kdtree/: kdtree.h
hdmap_engine/include/hdmap_engine/algo/routing/: astar_strategy.h  routing.h  strategy.h
hdmap_engine/include/hdmap_engine/common/: log.h  macros.h  param.h  pipeline.h  status.h  utils.h
hdmap_engine/include/hdmap_engine/core/kdtree/: kdtree.h
hdmap_engine/include/hdmap_engine/core/routing/: astar_strategy.h  routing.h  strategy.h
hdmap_engine/src/: engine.cc  engine_impl.cc
hdmap_engine/src/adapter/opendrive/: opendrive_convertor.cc  opendrive_parser.cc
hdmap_engine/src/adapter/opendrive/parser/: header_parser.cc  map_parser.cc  road_parser.cc  section_parser.cc
hdmap_engine/src/algo/kdtree/: kdtree.cc
hdmap_engine/src/algo/routing/: astar_strategy.cc  routing.cc  strategy.cc
hdmap_engine/src/common/: status.cc  utils.cc
hdmap_engine/src/core/kdtree/: kdtree.cc
hdmap_engine/src/core/routing/: astar_strategy.cc  routing.cc  strategy.cc
hdmap_engine/test/: common_test.cc  kdtree_test.cc
hdmap_msgs/: CMakeLists.txt  package.xml
hdmap_msgs/msg/: Boundary.msg  Curve.msg  Lane.msg  Map.msg  MapFileInfo.msg  Point.msg  Region.msg  Road.msg  Section.msg
hdmap_msgs/srv/: GetGlobalMap.srv  SendMapFile.srv
hdmap_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
hdmap_rviz_plugins/include/hdmap_rviz_plugins/: hdmap_display.h  hdmap_rviz_plugins.h  mouse_tool.h  select_file_tool.h
hdmap_rviz_plugins/include/hdmap_rviz_plugins/util/: current_region.h  event_manager.h  overlay_component.h  overlay_text.h  overlay_ui.h  overlay_utils.h
hdmap_rviz_plugins/include/util/: current_region.h  overlay_component.h  overlay_text.h  overlay_ui.h
hdmap_rviz_plugins/src/: hdmap_display.cc  hdmap_rviz_plugins.cc  mouse_tool.cc  select_file_tool.cc
hdmap_rviz_plugins/src/util/: current_region.cc  event_manager.cc  overlay_component.cc  overlay_utils.cc
hdmap_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
hdmap_server/conf/: a copy.xml  a.xml  hdmap_server.yaml
hdmap_server/config/: hdmap_server.rviz  hdmap_server.yaml
hdmap_server/include/hdamp_server/: server.h
hdmap_server/launch/: hdmap_server.launch.py  no_rviz.launch.py
hdmap_server/rviz/: hdmap_server.rviz
hdmap_server/src/: main.cc  server.cc  server.h
include/hdmap/: engine.h  engine_impl.h  geometry.h
include/hdmap/adapter/: convertor.h  parser.h
include/hdmap/adapter/opendrive/: element.h  opendrive_convertor.h  opendrive_parser.h
include/hdmap/adapter/opendrive/parser/: base_parser.h  header_parser.h  map_parser.h  road_parser.h  section_parser.h
include/hdmap/adapter/opendrive/spiral/: odrSpiral.h
include/hdmap/algo/kdtree/: kdtree.h
include/hdmap/algo/routing/: astar_strategy.h  routing.h  strategy.h
include/hdmap/common/: param.h  pipeline.h  rw_lock.h  status.h  utils.h
include/opendrive-engine/: convertor.h  engine.h  engine_impl.h  version.h  version.h.in
include/opendrive-engine/algo/kdtree/: kdtree.h
include/opendrive-engine/algo/routing/: astar_strategy.h  define.h  graph.h  routing.h  strategy.h
include/opendrive-engine/common/: common.h  common.hpp  g.h  log.h  param.h  status.h
include/opendrive-engine/core/: define.h  geometry.h  header.h  id.h  junction.h  lane.h  map.h  road.h  section.h
include/opendrive-engine/geometry/: aabox2d.h  box2d.h  euler_angles_zxy.h  geometry.h  line_segment2d.h  polygon2d.h  vec2d.h
include/opendrive-engine/math/: math.h
scripts/: build.sh  check_code.sh  install.py  run_all_test.sh  run_tests.sh  run_viewer.py  run_viewer.sh
src/: convertor.cc  engine.cc  engine_impl.cc
src/adapter/opendrive/: opendrive_convertor.cc  opendrive_parser.cc
src/adapter/opendrive/parser/: header_parser.cc  map_parser.cc  road_parser.cc  section_parser.cc
src/adapter/opendrive/spiral/: odrSpiral.cc
src/algo/kdtree/: kdtree.cc
src/algo/routing/: astar_strategy.cc  define.cc  routing.cc  strategy.cc
src/common/: common.cc  g.cc  status.cc  utils.cc
src/geometry/: aabox2d.cc  box2d.cc  euler_angles_zxy.cc  line_segment2d.cc  polygon2d.cc  vec2d.cc
src/math/: math.cc
tests/: CMakeLists.txt  engine_test.cc  kdtree_test.cc  main.cc
viewer/backend/: CMakeLists.txt  main.cc
viewer/backend/conf/: engine_server.yaml
viewer/backend/src/: api.cc  api.h  global_data.cc  global_data.h  log.h  log.hpp  msgs.h  param.cc  param.h  server.cc  server.h  util.cc  util.h
viewer/frontend/: .gitignore  package-lock.json  package.json
viewer/frontend/src/: App.vue  main.js
viewer/frontend/src/api/: api.js  index.js
viewer/frontend/src/components/: Home.vue
viewer/frontend/src/router/: index.js
viewer/frontend/src/utils/: axios.js  websocket.js
